--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "express": "^4.18.2",
     "faker-br": "^0.4.1",
     "mariadb": "^3.2.2",
-    "nodemon": "^3.0.1",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.3.1"
+    "@faker-js/faker": "^8.3.1",
+    "nodemon": "^3.0.1"
   }
 }
